# MicroECS

./: CMakeLists.txt  README.md
includes/: component.hpp  component_manager.hpp  entity.hpp  id_generator.hpp  system.hpp
includes/micro_ecs/: component.hpp  component_pool.hpp  entity.hpp  id_generator.hpp  micro_ecs.hpp
tests/: test.cpp  test_component.hpp  test_system.hpp
